--- a/pokevolution.html
+++ b/pokevolution.html
@@ -9,7 +9,7 @@ Evolution of a pokemon in the game Pokemon Go is by achieving a given limit of c
 <p leftspace=30>		On an egg hatch it may give upto 20 candies of the hatched pokemon.</p>
 <p>
 
-Transfer of pokemon to the Professor Willow will give a candi each. 
+Transfer of pokemon to Professor Willow will give a candy each. 
 </p>
 </body>
 </html>
